# lmdb

./: CMakeLists.txt
libraries/liblmdb/: CMakeLists.txt
